Added Vkontakte (The most popular social network CIS, vk.com) button.

--- a/Demo/AAShareBubbles/en.lproj/ViewController_iPhone.xib
+++ b/Demo/AAShareBubbles/en.lproj/ViewController_iPhone.xib
@@ -43,7 +43,7 @@
 						<string key="NSFrame">{{144, 260}, {32, 27}}</string>
 						<reference key="NSSuperview" ref="774585933"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="58238845"/>
+						<reference key="NSNextKeyView" ref="328499211"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -81,13 +81,13 @@
 						<string key="NSFrame">{{58, 426}, {174, 23}}</string>
 						<reference key="NSSuperview" ref="774585933"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="517065944"/>
+						<reference key="NSNextKeyView" ref="58238845"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
-						<float key="IBUIValue">122</float>
+						<float key="IBUIValue">130</float>
 						<float key="IBUIMinValue">80</float>
 						<float key="IBUIMaxValue">130</float>
 					</object>
@@ -129,7 +129,7 @@
 						<string key="NSFrame">{{60, 406}, {106, 21}}</string>
 						<reference key="NSSuperview" ref="774585933"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="328499211"/>
+						<reference key="NSNextKeyView" ref="517065944"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -171,6 +171,7 @@
 						<string key="NSFrame">{{242, 476}, {54, 21}}</string>
 						<reference key="NSSuperview" ref="774585933"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
